--- a/results.html
+++ b/results.html
@@ -31,6 +31,12 @@
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
             crossorigin="anonymous"
         ></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@300;500&family=Oswald:wght@400;500&family=Poiret+One&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <div class="container">
@@ -44,7 +50,7 @@
                     <svg class="bi me-2" width="40" height="32">
                         <use xlink:href="#bootstrap" />
                     </svg>
-                    <span class="fs-3">MOVIE TIME</span>
+                    <span class="fs-2 logo">MOVIE TIME</span>
                 </a>
 
                 <ul class="nav nav-pills">
@@ -58,13 +64,15 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="favorites.html" class="nav-link fs-4">Favorites</a>
+                        <a href="favorites.html" class="nav-link fs-4"
+                            >Favorites</a
+                        >
                     </li>
                 </ul>
             </header>
         </div>
 
-        <main class="container album">
+        <main class="container">
             <div class="blob-crt">
                 <svg
                     version="1.1"
@@ -72,6 +80,8 @@
                     viewBox="0 0 500 500"
                     width="100%"
                     id="blobSvg"
+                    filter="blur(6.6px)"
+                    style="opacity: 1"
                 >
                     <defs>
                         <lineargradient
@@ -83,20 +93,20 @@
                         >
                             <stop
                                 offset="0%"
-                                style="stop-color: rgb(83, 117, 254)"
+                                style="stop-color: rgb(209, 186, 38)"
                             ></stop>
                             <stop
                                 offset="100%"
-                                style="stop-color: rgb(203, 87, 87)"
+                                style="stop-color: rgb(14, 168, 47)"
                             ></stop>
                         </lineargradient>
                     </defs>
-                    <path id="blob" fill="url(#gradient)">
+                    <path id="blob" fill="url(#gradient)" style="opacity: 0.53">
                         <animate
                             attributeName="d"
-                            dur="7800ms"
+                            dur="10s"
                             repeatCount="indefinite"
-                            values="M440.5,320.5Q418,391,355.5,442.5Q293,494,226,450.5Q159,407,99,367Q39,327,31.5,247.5Q24,168,89,125.5Q154,83,219.5,68Q285,53,335.5,94.5Q386,136,424.5,193Q463,250,440.5,320.5Z;M453.78747,319.98894Q416.97789,389.97789,353.96683,436.87838Q290.95577,483.77887,223.95577,447.43366Q156.95577,411.08845,105.64373,365.97789Q54.33169,320.86732,62.67444,252.61056Q71.01719,184.3538,113.01965,135.21007Q155.02211,86.06634,220.52211,66.46683Q286.02211,46.86732,335.5,91.94472Q384.97789,137.02211,437.78747,193.51106Q490.59704,250,453.78747,319.98894Z;M411.39826,313.90633Q402.59677,377.81265,342.92059,407.63957Q283.24442,437.46649,215.13648,432.5428Q147.02853,427.61911,82.23325,380.9572Q17.43796,334.29529,20.45223,250.83809Q23.46649,167.38089,82.5856,115.05707Q141.70471,62.73325,212.19045,63.73015Q282.67618,64.72705,352.67308,84.79839Q422.66998,104.86972,421.43486,177.43486Q420.19974,250,411.39826,313.90633Z;M440.5,320.5Q418,391,355.5,442.5Q293,494,226,450.5Q159,407,99,367Q39,327,31.5,247.5Q24,168,89,125.5Q154,83,219.5,68Q285,53,335.5,94.5Q386,136,424.5,193Q463,250,440.5,320.5Z;"
+                            values="M429,328Q437,406,362,433Q287,460,218,442Q149,424,122.5,365Q96,306,74.5,242Q53,178,94.5,115Q136,52,206.5,73Q277,94,347.5,101.5Q418,109,419.5,179.5Q421,250,429,328Z;M419.06254,317.79517Q411.11118,385.59033,349.66843,425.59894Q288.22568,465.60755,228.34547,428.45831Q168.46526,391.30906,120.24124,353.19622Q72.01722,315.08338,69.86103,249.40801Q67.70483,183.73263,103.47221,120.73263Q139.23958,57.73263,215.36631,36.75347Q291.49305,15.77432,346.41495,69.35242Q401.33686,122.93051,414.17538,186.46526Q427.0139,250,419.06254,317.79517Z;M402.96858,305.89372Q383.43068,361.78743,330.92976,387.4658Q278.42884,413.14418,202.60721,438.39372Q126.78558,463.64325,93.53789,391.42791Q60.29021,319.21257,78.64603,256.64233Q97.00185,194.07209,128.64418,144.10813Q160.28651,94.14418,219.21534,92.06839Q278.14418,89.9926,343.5342,103.10536Q408.92421,116.21812,415.71534,183.10906Q422.50647,250,402.96858,305.89372Z;M425.57934,323.79599Q426.22734,397.59197,355.10104,419.41516Q283.97474,441.23834,222.29242,423.00907Q160.6101,404.77979,95.49644,367.33031Q30.38277,329.88083,44.58128,255.13536Q58.77979,180.3899,99.7419,120.41159Q140.70401,60.43329,214.57221,45.49287Q288.44042,30.55246,350.61367,72.29792Q412.78692,114.04339,418.85914,182.0217Q424.93135,250,425.57934,323.79599Z;M453.57191,328.53752Q437.08754,407.07503,364.57816,448.74386Q292.06878,490.41269,219.55628,459.1657Q147.04377,427.91871,108.99375,371.46874Q70.94372,315.01876,56.52814,244.52814Q42.11255,174.03752,86.02814,107.96874Q129.94372,41.89995,209.98749,31.84993Q290.03126,21.79991,346.01876,71.89683Q402.00625,121.99375,436.03126,185.99687Q470.05628,250,453.57191,328.53752Z;M429,328Q437,406,362,433Q287,460,218,442Q149,424,122.5,365Q96,306,74.5,242Q53,178,94.5,115Q136,52,206.5,73Q277,94,347.5,101.5Q418,109,419.5,179.5Q421,250,429,328Z"
                         ></animate>
                     </path>
                 </svg>
@@ -155,15 +165,20 @@
             </div>
         </main>
 
-        <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-            <p>
-                Blog template built for
-                <a href="https://getbootstrap.com/">Bootstrap</a> by
-                <a href="https://twitter.com/mdo">@mdo</a>.
-            </p>
-            <p class="mb-0">
-                <a href="#">Back to top</a>
-            </p>
+        <footer class="text-body-secondary py-5">
+            <div class="container">
+                <p class="float-end mb-1">
+                    <a href="#">Back to top</a>
+                </p>
+                <p class="mb-1">&copy; 2023</p>
+                <p class="mb-0">
+                    New to Bootstrap? <a href="/">Visit the homepage</a> or read
+                    our
+                    <a href="../getting-started/introduction/"
+                        >getting started guide</a
+                    >.
+                </p>
+            </div>
         </footer>
         <script src="results.js"></script>
     </body>
