--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="" />
         <title>Movie Recommendation App</title>
         <link rel="stylesheet" type="text/css" href="./style.css" />
+        <link href="sticky-footer.css" rel="stylesheet" />
 
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -25,7 +26,7 @@
             rel="stylesheet"
         />
     </head>
-    <body class="text-center">
+    <body class="d-flex flex-column h-100">
         <!-- Header -->
         <div class="container text-center">
             <header
@@ -60,8 +61,8 @@
             </header>
         </div>
 
-        <main>
-            <section class="album py-5">
+        <main class="flex-shrink-0">
+            <section class="py-5">
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
                         <h1 class="fs-1 fw-bold">
@@ -88,7 +89,7 @@
                 </div>
             </section>
             <!-- Section -->
-            <div class="album py-5">
+            <div class="py-5">
                 <div class="container d-flex justify-content-center">
                     <div
                         id="buttonHolder"
@@ -106,7 +107,7 @@
                 </div>
 
                 <div class="userSet"></div>
-                <hr />
+
                 <div
                     class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"
                     id="movieListContainer"
@@ -114,7 +115,8 @@
             </div>
         </main>
         <!-- Footer -->
-        <footer class="text-body-secondary py-5">
+        <footer class="footer mt-auto py-3">
+            <hr />
             <div class="container">
                 <p class="float-end mb-1">
                     <a href="#">Back to top</a>
