--- a/results.html
+++ b/results.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,6 +19,7 @@
         <!-- Custom styles for this template -->
         <link href="blog.css" rel="stylesheet" />
         <link href="style.css" rel="stylesheet" />
+        <link href="sticky-footer.css" rel="stylesheet" />
 
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -38,7 +39,7 @@
             rel="stylesheet"
         />
     </head>
-    <body>
+    <body class="d-flex flex-column h-100">
         <div class="container">
             <header
                 class="d-flex flex-wrap justify-content-between py-3 mb-4 border-bottom"
@@ -72,7 +73,7 @@
             </header>
         </div>
 
-        <main class="container">
+        <main class="container flex-shrink-0">
             <div class="row mb-2 justify-content-center">
                 <div class="col-md-6">
                     <div
@@ -129,7 +130,8 @@
             </div>
         </main>
 
-        <footer class="text-body-secondary py-5">
+        <footer class="footer mt-auto py-3">
+            <hr />
             <div class="container">
                 <p class="float-end mb-1">
                     <a href="#">Back to top</a>
